# aiofmp

./: .releaserc.json  README.md  package.json  pyproject.toml
.github/workflows/: release.yml  test.yml
aiofmp/: __init__.py  analyst.py  analyst_tools.py  base.py  calendar.py  calendar_tools.py  chart.py  chart_tools.py  cli.py  commodity.py  commodity_tools.py  company.py  company_tools.py  cot.py  cot_tools.py  crypto.py  crypto_tools.py  dcf.py  dcf_tools.py  directory.py  directory_tools.py  economics.py  economics_tools.py  etf.py  etf_tools.py  fmp_client.py  forex.py  forex_tools.py  form13f.py  form13f_tools.py  indexes.py  indexes_tools.py  insider_trades.py  insider_trades_tools.py  market_performance.py  market_performance_tools.py  mcp_server.py  mcp_tools.py  news.py  news_tools.py  (+10 more)
aiofmp/cachedclient/: __init__.py  client.py  gap.py  proxy.py  registry.py
aiofmp/cachedclient/storage/: __init__.py  base.py  parquet.py
docs/: RELEASING.md  api.md
examples/: fmp_analyst_example.py  fmp_cachedclient_example.py  fmp_calendar_example.py  fmp_chart_example.py  fmp_commodity_example.py  fmp_company_example.py  fmp_cot_example.py  fmp_crypto_example.py  fmp_dcf_example.py  fmp_directory_example.py  fmp_economics_example.py  fmp_etf_example.py  fmp_forex_example.py  fmp_form13f_example.py  fmp_indexes_example.py  fmp_insider_trades_example.py  fmp_search_example.py  fmp_statements_example.py
scripts/: setup-git.sh  setup-release.sh  update_version.py
tests/: test_analyst.py  test_calendar.py  test_chart.py  test_commodity.py  test_company.py  test_cot.py  test_crypto.py  test_dcf.py  test_directory.py  test_economics.py  test_etf.py  test_forex.py  test_form13f.py  test_indexes.py  test_insider_trades.py  test_market_performance.py  test_mcp_server.py  test_mcp_tools.py  test_news.py  test_quote.py  test_search.py  test_senate.py  test_statements.py  test_technical_indicators.py
tests/test_cachedclient/: test_cached_integration.py  test_gap.py  test_parquet_storage.py  test_registry.py
