[project]
name = "aiofmp"
version = "0.1.0"
description = "Asynchronous Financial Modeling Prep API Client with MCP Server"
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.8"
authors = [
    {name = "codemug", email = "u.manshahid@gmail.com"}
]
maintainers = [
    {name = "codemug", email = "u.manshahid@gmail.com"}
]
keywords = [
    "financial",
    "api",
    "async",
    "mcp",
    "model-context-protocol",
    "financial-modeling-prep",
    "stocks",
    "crypto",
    "forex"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed",
]
[project.urls]
Homepage = "https://github.com/codemug/aiofmp"
Documentation = "https://github.com/codemug/aiofmp#readme"
Repository = "https://github.com/codemug/aiofmp.git"
Issues = "https://github.com/codemug/aiofmp/issues"

dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.0.0",
    "click>=8.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=5.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
aiofmp-mcp-server = "aiofmp.cli:mcp_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
