[project]
name = "aiofmp"
version = "0.1.0"
description = "Asynchronous Financial Modeling Prep API Client with MCP Server"
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.10"
authors = [
    {name = "codemug", email = "u.manshahid@gmail.com"}
]
maintainers = [
    {name = "codemug", email = "u.manshahid@gmail.com"}
]
keywords = [
    "financial",
    "api",
    "async",
    "mcp",
    "model-context-protocol",
    "financial-modeling-prep",
    "stocks",
    "crypto",
    "forex"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.0.0",
    "click>=8.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/codemug/aiofmp"
Documentation = "https://github.com/codemug/aiofmp#readme"
Repository = "https://github.com/codemug/aiofmp.git"
Issues = "https://github.com/codemug/aiofmp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=5.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
aiofmp-mcp-server = "aiofmp.cli:mcp_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 88
fix = false
exclude = ["examples/", "scripts/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "python-semantic-release>=9.8.0",
]

[tool.semantic_release]
branch = "main"
version_source = "tag"  # use tag-based now that we will bootstrap an initial tag
tag_format = "v{version}"
commit_parser = "conventional"
build_command = "uv build"
repository = "https://github.com/codemug/aiofmp"
upload_to_pypi = true
upload_to_release = true
major_on_zero = true
allow_zero_version = false
assets = []
logging_use_named_masks = false

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.semantic_release.changelog]
exclude_commit_patterns = []
mode = "update"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true
